swagger and handler fixes
