# docs/swagger.json
@@ -125,7 +125,7 @@
                 }
             }
         },
-        "/stats/player/:id": {
+        "/stat/players/{playerId}": {
             "get": {
                 "description": "Get a list of all players",
                 "produces": [
@@ -154,7 +154,7 @@
                 }
             }
         },
-        "/stats/team/:id": {
+        "/stat/team/{teamId}": {
             "get": {
                 "description": "Get a list of all players",
                 "produces": [
@@ -163,7 +163,16 @@
                 "tags": [
                     "players"
                 ],
-                "summary": "player stats",
+                "summary": "team stats",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Player ID",
+                        "name": "playerId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
