# main.go
@@ -12,7 +12,6 @@ import (
 	"github.com/golang-migrate/migrate/v4"
 	"github.com/golang-migrate/migrate/v4/database/postgres"
 	_ "github.com/golang-migrate/migrate/v4/source/file"
-	"github.com/gorilla/mux"
 	"github.com/joho/godotenv"
 	_ "github.com/lib/pq"
 	httpSwagger "github.com/swaggo/http-swagger"
@@ -41,14 +40,11 @@ func main() {
 
 	runMigrations(db, cfg)
 
-	r := mux.NewRouter()
-
-	r.HandleFunc("/add-stat", handlers.AddStatHandler(db))
-	r.HandleFunc("/stat/player/{playerId}", handlers.GetPlayerAvgStatHandler(db))
-	r.HandleFunc("/stat/teams/{teamId}", handlers.GetTeamAvgStatHandler(db))
-
-	r.HandleFunc("/add-players", handlers.AddPlayerHandler(db)) // POST /players
-	r.HandleFunc("/players", handlers.ListPlayersHandler(db))   // GET /players
+	http.HandleFunc("/add-stat", handlers.AddStatHandler(db))
+	http.HandleFunc("/stat/players/{playerId}", handlers.GetPlayerAvgStatHandler(db))
+	http.HandleFunc("/stat/teams/{teamId}", handlers.GetTeamAvgStatHandler(db))
+	http.HandleFunc("/add-players", handlers.AddPlayerHandler(db)) // POST /players
+	http.HandleFunc("/players", handlers.ListPlayersHandler(db))   // GET /players
 
 	// Swagger endpoint
 	http.Handle("/swagger/", httpSwagger.WrapHandler)
